--- a/css/style.css
+++ b/css/style.css
@@ -52,26 +52,25 @@ ul, li{
 }
 
 .button {
+    cursor: pointer;
     padding: 10px 25px;
     margin: 0 10px;
     color: white;
     transition: .3s;
-}
-
-.button_empty {
-    background: transparent;
-    border: 1px solid white;
-}
-
-.button_full {
     background: #00897b;
-    border: 1px solid #00897b;
+    border: 2px solid #00897b;
+}
+
+.button:hover {
+    background: transparent;
+    border: 2px solid white;
 }
 
 .button_empty:hover,
 .button_full:hover {
     border: 1px dotted white;
     background: #04574e;
+    cursor: pointer;
 }
 
 /*О нас*/
@@ -82,6 +81,10 @@ ul, li{
     text-align: center;
     padding-top: 120px;
     padding-bottom: 125px;
+}
+
+.about__section {
+    margin-bottom: 110px;
 }
 
 .about__title {
@@ -100,4 +103,56 @@ ul, li{
     font-size: 20px;
     margin-top: 30px;
     margin-bottom: 20px;
+}
+
+/*Наши услуги*/
+
+.services {
+    color: black;
+    background: #e4fdf9;
+    text-align: center;
+    padding-top: 165px;
+    padding-bottom: 125px;
+}
+
+.our_card {
+    background: white;
+    padding: 50px 25px 40px;
+    transition: .3s;
+    margin-bottom: 30px;
+}
+
+.our_card:hover {
+    background: #00897b;
+    color: white;
+    box-shadow: 0px 10px 12px -3px rgba(0, 0, 0, .26);
+}
+
+.our_card:hover .icon, .our_card:hover .services__text {
+    color: white;
+}
+
+.our_card:hover .button-services {
+    border: 2px solid white;
+    color: white;
+}
+
+.icon {
+    transition: .3s;
+    font-size: 60px;
+    color: black;
+}
+
+.button-services {
+    transition: .3s;
+    color: black;
+    text-transform: uppercase;
+    border: 2px solid black;
+    background: transparent;
+    padding: 10px 12px;
+    font-family: "Open Sans Semibold";
+}
+
+.button-services:hover {
+    cursor: pointer;
 }
