--- a/gulp/dev/pug/modules/header.pug
+++ b/gulp/dev/pug/modules/header.pug
@@ -5,7 +5,7 @@ header.menu-bar
 		.row
 			.col-xl-2
 				img(
-					src="../../images/logo.png" 
+					src="../../static/img/logo.png" 
 					alt="logo"
 					class="logo"
 				)
