--- a/gulp/dev/pug/modules/variables.pug
+++ b/gulp/dev/pug/modules/variables.pug
@@ -7,6 +7,6 @@
 - var services_h3= ['Research', 'Portfolio' , 'Support' , 'Documentation' , 'Development' , 'Design']
 - var services_text= ['Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, est et exercitationem officia soluta ut.', 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, est et exercitationem officia soluta ut.', 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, est et exercitationem officia soluta ut.', 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, est et exercitationem officia soluta ut.', 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, est et exercitationem officia soluta ut.', 'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, est et exercitationem officia soluta ut.']
 - var services_button= ['Read more', 'Read more', 'Read more', 'Read more', 'Read more', 'Read more']
-- var portfolio_button= ['All', 'Web design', 'Ui/Ux design', 'Mockups']
+- var portfolio_button= ['Web design', 'Ui/Ux design', 'Mockups']
 - var portfolio_image= ['item1', 'item2', 'item3', 'item4', 'item5', 'item6']
-- var portfolio_button_filter= ['all', 'wd', 'ud', 'moc']
+- var portfolio_button_filter= ['wd', 'ud', 'moc']
