--- a/pug/gulpv3-sass-pug/src/pug/global/head.pug
+++ b/pug/gulpv3-sass-pug/src/pug/global/head.pug
@@ -15,5 +15,5 @@ mixin head(title)
 		link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css")
 		link(rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css")
 		link(rel="stylesheet" type="text/css" href="css/app.min.css?v=1.0")
-
+		link(rel="stylesheet" href="../sass/styles.css")
 		
